--- a/package.json
+++ b/package.json
@@ -4,18 +4,34 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~52.0.7",
+    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-firebase/app": "^21.5.0",
+    "@react-native-firebase/firestore": "^21.5.0",
+    "@react-navigation/native": "^7.0.3",
+    "@react-navigation/stack": "^7.0.4",
+    "expo": "^52.0.0",
+    "expo-image-picker": "^16.0.2",
     "expo-status-bar": "~2.0.0",
+    "firebase": "^11.0.2",
+    "metro": "^0.81.0",
+    "metro-config": "^0.81.0",
+    "metro-react-native-babel-preset": "^0.77.0",
     "react": "18.3.1",
-    "react-native": "0.76.2"
+    "react-native": "0.76.2",
+    "react-native-calendar-events": "^2.2.0",
+    "react-native-calendars": "^1.1307.0",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-permissions": "^5.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.25.2",
+    "@babel/preset-react": "^7.25.9",
+    "@react-native-community/cli": "^15.1.2"
   },
   "private": true
 }
